# aiimage

./: .gitignore  DEPLOY.md  docker-compose.yml  findings.md  progress.md  screenshot-demos.js  screenshot-zh.js  skills-lock.json  task_plan.md  webrise-next.tgz  新建 文本文档.html  新建 文本文档7.html
.claude/: settings.json  settings.local.json
.firecrawl/: kling-billing.md  kling-packages-full.md  kling-pricing.md  search-jimeng-price.json  search-kling-price.json  seedance-pricing.md  video-api-price-compare.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 58af060879b8_prompt_tables.py  89ce6001fd80_init.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: __init__.py  credit_order.py  generation.py  prompt.py  template.py  user.py
backend/app/routers/: auth.py  credits.py  generations.py  history.py  prompts.py  templates.py
backend/app/schemas/: credit.py  generation.py  prompt.py  user.py
backend/app/services/: credit_estimator.py  openai_image.py  payment.py  prompt_builder.py  sms.py  storage.py
backend/app/tests/: conftest.py  test_auth.py  test_credit_estimator.py  test_generation.py  test_prompt_builder.py  test_prompts.py
backend/scripts/: cleanup_expired.py  generate_prompt_examples.py  seed_prompts.py  seed_templates.py
docs/: payment-automation-plan.md
frontend/: .env.production.example  package-lock.json  package.json
ocean-english/: .env.example  .gitattributes  .gitignore  (+9 more)
(+1637 files in other folders)
