[tool.poetry]
name = "ai-image-backend"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
redis = "^5.0"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
pydantic-settings = "^2.3"
openai = "^1.35"
boto3 = "^1.34"
pillow = "^11.0"
httpx = "^0.27"
aliyun-python-sdk-core = "^2.15"
aliyun-python-sdk-dysmsapi = "^2.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
